-------------------------------------------------------------------------------
Changes in version 0.96


Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 0.95

- Fixed bug in header pattern matching that made it only look at the
  first header line.  Thanks Janos Farkas.

- Fixed bug in handling of environment variables when applying multiple
  rules to the same message.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 0.94

- Switched to CVM 2 support.

- Added support for restricting patterns to match only in headers.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 0.93

- Fixed bug in pattern matching where the pattern was longer than the
  line that would other match.

- Fixed bug in parsing the databytes column in mail rules.

- Fixed omission of not resetting maxdatabytes, which could be set by a
  rule, after checking for sender rules.

- Fixed bug in handling multiple sender or recipient specific rules.

- Modified the CVM lookup secret handling to use $CVM_LOOKUP_SECRET just
  like the latest CVM code, falling back to $LOOKUP_SECRET if that isn't
  set.

- Added seperate $AUTH_TIMEOUT and $AUTH_SESSION_TIMEOUT overrides for
  the authentication front-ends (imapfront-auth and pop3front-auth).

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 0.92
